SERVER-49019 Run commitTransaction for refineShardKey on fresh opCtx

(cherry picked from commit 7c8935c12a4d6b6ae6af9a570870450475f8c3e9)